<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:animateLayoutChanges="true"
    android:background="@color/background_home"
    tools:context=".ui.transfer.TransferActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:text="@string/make_transfer"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:includeFontPadding="false"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/shadow"
            app:layout_constraintTop_toBottomOf="@id/title"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_payees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/payees"
            style="@style/TextInputLayoutStyleDropdown"
            app:layout_constraintTop_toBottomOf="@id/title">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/tv_payees"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            app:layout_constraintTop_toBottomOf="@id/layout_payees"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="01234567890"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_desc"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:hint="@string/description"
            app:layout_constraintTop_toBottomOf="@id/layout_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:inputType="text"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_transfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/transfer_now"
            style="@style/MaterialButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>