<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_home"
    tools:context=".ui.home.HomeActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_transfer">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_background"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/background_top_purple"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="20dp"
                    android:src="@drawable/ic_logo_bold"
                    android:scaleType="fitXY"
                    app:layout_constraintTop_toTopOf="@id/btn_logout"
                    app:layout_constraintBottom_toBottomOf="@id/btn_logout"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:includeFontPadding="false"
                    app:layout_constraintTop_toTopOf="@id/img_logo"
                    app:layout_constraintStart_toEndOf="@id/img_logo"
                    app:layout_constraintBottom_toBottomOf="@id/img_logo"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="20dp"
                    android:padding="0dp"
                    android:text="@string/logout"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:includeFontPadding="false"
                    android:textAllCaps="false"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    app:iconTint="@color/red"
                    app:iconSize="30dp"
                    app:icon="@drawable/ic_baseline_power_settings_new_24"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:text="Hi, Name"
                    app:layout_constraintTop_toBottomOf="@id/img_logo"
                    app:layout_constraintStart_toStartOf="parent"/>


                <androidx.cardview.widget.CardView
                    android:id="@+id/card_balance"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="-90dp"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="@id/img_background">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingVertical="10dp"
                        android:paddingHorizontal="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/balance"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="18sp"/>

                        <TextView
                            android:id="@+id/tv_balance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="200.00"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tv_card_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            tools:text="2002-2002-2002"
                            android:textColor="@color/black"
                            android:textSize="20sp"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/txt_transaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:textColor="@color/black"
                    android:text="@string/transaction_history"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/card_balance"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_transaction"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:overScrollMode="ifContentScrolls"
                    tools:listitem="@layout/item_transaction"
                    app:layout_constraintTop_toBottomOf="@id/txt_transaction"/>

                <TextView
                    android:id="@+id/txt_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"
                    android:text="@string/empty_transaction"
                    app:layout_constraintTop_toBottomOf="@id/txt_transaction"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_transfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="bottom"
            style="@style/MaterialButtonStyle"
            android:text="@string/make_transfer"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>